# SIRC

./: .gitignore  LICENSE  Makefile  build.sh  meson.build
include/: conf.h  packets.h  util.h
src/: clients.c  config.h  handle_packet.c  main.c  packets.c  packets.h  secure.c  secure.h  server.c  server.h  util.c  util.h
